--- a/SMS/Base.lproj/Main.storyboard
+++ b/SMS/Base.lproj/Main.storyboard
@@ -516,7 +516,7 @@
         <!--Noticias-->
         <scene sceneID="4WR-2i-d8y">
             <objects>
-                <viewController storyboardIdentifier="NovedadesVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lyf-FD-pPX" customClass="NovedadesVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NovedadesVC" title="Noticias" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lyf-FD-pPX" customClass="NovedadesVC" customModule="SMS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BUr-qu-sIq"/>
                         <viewControllerLayoutGuide type="bottom" id="qgy-tE-a69"/>
@@ -525,29 +525,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PWB-hd-R1A">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="122" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PWB-hd-R1A">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="50" id="hGN-iW-e6D" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="122" id="hGN-iW-e6D" customClass="TableViewCell" customModule="SMS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="122"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hGN-iW-e6D" id="eeH-6P-oy4">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNP-Cb-MYV">
-                                                    <rect key="frame" x="28" y="8" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNP-Cb-MYV">
+                                                    <rect key="frame" x="134" y="0.0" width="233" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tV6-E2-zRw">
+                                                    <rect key="frame" x="134" y="50" width="220" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WHg-XE-7r9">
+                                                    <rect key="frame" x="134" y="79" width="212" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rii-z5-4P0">
+                                                    <rect key="frame" x="0.0" y="8" width="116" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="imagenPerfil" destination="rii-z5-4P0" id="gi1-fF-lDO"/>
+                                            <outlet property="labelHora" destination="WHg-XE-7r9" id="Tru-JJ-fwf"/>
                                             <outlet property="labelNombre" destination="rNP-Cb-MYV" id="SwK-zl-fpa"/>
+                                            <outlet property="labelTitulo" destination="tV6-E2-zRw" id="OSo-au-XTU"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -560,13 +581,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Noticias" image="novedades.png" selectedImage="novedades.png" id="bvX-WJ-YQQ"/>
+                    <navigationItem key="navigationItem" title="Noticias" id="6YK-un-f5x"/>
                     <connections>
                         <outlet property="tabla" destination="PWB-hd-R1A" id="J0R-w2-oBB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DdZ-kE-SYg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2962.4000000000001" y="3219.9400299850076"/>
+            <point key="canvasLocation" x="-5503.1999999999998" y="3476.3118440779613"/>
         </scene>
         <!--Comité Académico-->
         <scene sceneID="cGh-yr-2sq">
@@ -1024,8 +1046,8 @@
                         <segue destination="LGy-tf-vRe" kind="relationship" relationship="viewControllers" id="zhZ-wB-Ecj"/>
                         <segue destination="INc-YK-7hn" kind="relationship" relationship="viewControllers" id="Fus-MX-KpB"/>
                         <segue destination="Htp-sw-vXK" kind="relationship" relationship="viewControllers" id="3RD-sE-eOB"/>
-                        <segue destination="lyf-FD-pPX" kind="relationship" relationship="viewControllers" id="sFc-Iq-weW"/>
                         <segue destination="Zvc-Fm-Kai" kind="relationship" relationship="viewControllers" id="5Nd-3G-jDX"/>
+                        <segue destination="lyf-FD-pPX" kind="relationship" relationship="viewControllers" id="dCh-b0-g7v"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qge-Ow-08L" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1321,11 +1343,20 @@
                                     <outlet property="delegate" destination="cER-1T-fPp" id="Uke-SQ-JyE"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vhe-qM-eCF">
+                                <rect key="frame" x="302" y="181" width="57" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Evaluar">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="botonMapa" destination="PNu-gj-7tc" id="0Ju-re-pgE"/>
+                        <outlet property="botonRating" destination="Vhe-qM-eCF" id="7n0-KX-Wgu"/>
                         <outlet property="labelDiaDetallePrograma" destination="p2X-wG-gzL" id="gbw-41-SRC"/>
                         <outlet property="labelHoraDetallePrograma" destination="pde-9a-qMr" id="h5B-p9-0WF"/>
                         <outlet property="labelLugarDetallePrograma" destination="GTs-hR-yWY" id="Bpa-ol-dcM"/>
